@@ -1,6 +1,7 @@
 trunk
 ======
 * added omxSelectRowsAndCols, omxSelectRows and omxSelectCols documentation
+* fixed model flattening to keep track of confidence intervals in submodels
 
 Beta Release 999.0.0-1661 (May 20, 2011)
 ======================================
